--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,9 @@ buildscript {
         maven {
             url 'https://jitpack.io'
         }
+        maven {
+            url 'https://android-sdk.is.com/'
+        }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:7.3.1'
@@ -19,6 +22,9 @@ allprojects {
         jcenter()
         maven {
             url 'https://jitpack.io'
+        }
+        maven {
+            url 'https://android-sdk.is.com/'
         }
     }
 }
