--- a/build.gradle
+++ b/build.gradle
@@ -4,15 +4,10 @@ buildscript {
     repositories {
         google()
         mavenCentral()
-        maven {
-            url 'https://jitpack.io'
-        }
-        maven {
-            url 'https://android-sdk.is.com/'
-        }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:8.3.2'
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
     }
 }
 
