--- a/build.gradle
+++ b/build.gradle
@@ -4,12 +4,10 @@ buildscript {
     repositories {
         google()
         mavenCentral()
-        maven {
-            url 'https://jitpack.io'
-        }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:8.3.2'
+        classpath 'com.android.tools.build:gradle:7.3.1'
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
     }
 }
 
@@ -19,6 +17,9 @@ allprojects {
         mavenCentral()
         maven {
             url 'https://jitpack.io'
+        }
+        maven {
+            url 'https://android-sdk.is.com/'
         }
     }
 }
